# scrape-with-re

./: MakeFile  Makefile  README.md  main.py  phpb_web.txt  phpbb_web.txt  pyproject.toml  vbulletin_web.txt
scrape_webz/: scrape.py
scrape_webz/data/: Post.py
scrape_webz/scrapers/: phpbb_scraper.py  scrape.py  scraper_base.py  vbulletin_scraper.py
scrape_webz/utils/: file_utils.py  text_utils.py
