[tool.poetry]
name = "scrape-webz"
version = "0.1.0"
description = ""
authors = ["Leon Markovich <leonmarkovich97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
ruff = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
